[MODFIN-299] Include rollover transfers in summaries